--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* common styles */
+/* common styles or utilities */
 * {
     margin: 0;
     padding: 0;
@@ -9,6 +9,21 @@ body {
     background-color: rgba(250, 250, 210, 0.5);
 }
 
+.container {
+    width: 90%;
+    margin: 0 auto;
+}
+
+.btn {
+    padding: 10px;
+    border: none;
+    border-radius: 70px;
+    background-color: crimson;
+    color: white;
+    font-size: 12px;
+    /* margin-left: 10px; */
+}
+
 /* header styles */
 
 /* navigation styles */
@@ -16,7 +31,7 @@ body {
     width: 100%;
     /* background-color: yellow; */
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     margin-top: 20px;
     padding: 10px;
@@ -33,4 +48,34 @@ body {
 
 .menubar-item {
     margin-left: 20px;
+}
+
+/* title section styles */
+.title-section {
+    width: 100%;
+    /* background-color: blueviolet; */
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
+    padding: 10px;
+
+}
+
+.title-content {
+    width: 50%;
+}
+
+.title-text {
+    margin-bottom: 15px;
+}
+
+.title-img {
+    width: 50%;
+}
+
+.title-img>img {
+    width: 100%;
+    border: 2px solid rgb(240, 238, 238);
+    border-radius: 50%;
+    padding: 10px;
 }
