--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ body {
     /* justify-content: space-between; */
     align-items: center;
     padding: 10px;
+    margin-top: 20px;
 
 }
 
@@ -78,4 +79,21 @@ body {
     border: 2px solid rgb(240, 238, 238);
     border-radius: 50%;
     padding: 10px;
+}
+
+/* company logos styles */
+.company-logos {
+    width: 100%;
+    border: 2px solid rgb(240, 238, 238);
+    border-left: none;
+    border-right: none;
+    /* display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    align-items: center;
+    gap: 20px; */
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 20px;
+    padding: 20px;
 }
