--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@ body {
     background-color: rgba(250, 250, 210, 0.5);
 }
 
-.container {
+.container,
+.inside-container {
     width: 90%;
     margin: 0 auto;
 }
@@ -84,7 +85,6 @@ body {
 
 /* company logos styles */
 .company-logos {
-    width: 100%;
     border: 2px solid rgb(240, 238, 238);
     border-left: none;
     border-right: none;
@@ -97,4 +97,53 @@ body {
     align-items: center;
     margin-top: 20px;
     padding: 20px;
+}
+
+/* collections section styles */
+.collection-section {
+    margin-top: 50px;
+    text-align: center;
+}
+
+.collections {
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 25px;
+}
+
+.item {
+    width: 250px;
+    height: 350px;
+    padding: 0 10px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: 10px 10px 30px lightgray;
+}
+
+.item-img>img {
+    width: 100%;
+}
+
+.item-info {
+    margin-top: 10px;
+}
+
+.item-title {
+    margin-bottom: 10px;
+}
+
+.fa-star,
+.fa-star-half-stroke {
+    color: gold;
+}
+
+.item-text {
+    font-size: 12px;
+}
+
+.item-text>span {
+    margin-left: 5px;
 }
