--- a/css/style.css
+++ b/css/style.css
@@ -149,3 +149,37 @@ body {
 .item-text>span {
     margin-left: 5px;
 }
+
+/* footer section styles */
+.footer-section {
+    margin-top: 50px;
+    background-color: rgb(42, 22, 63);
+    color: white;
+    width: 100%;
+    height: 150px;
+    /* text-align: center; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.footer-content,
+.social-icon {
+    text-align: center;
+    margin: 7px 0;
+}
+
+.footer-content h3 {
+    margin-bottom: 5px;
+}
+
+.fa-brands {
+    color: white;
+}
+
+.icon {
+    background-color: rgb(90, 60, 122);
+    padding: 10px;
+    border-radius: 50%;
+}
