responsive style add

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 body {
     background-color: rgba(250, 250, 210, 0.5);
+    width: 100%;
 }
 
 .container,
@@ -49,6 +50,10 @@ body {
 
 .menubar-item {
     margin-left: 20px;
+}
+
+.responsive-mmenubar {
+    display: none;
 }
 
 /* title section styles */
@@ -182,4 +187,59 @@ body {
     background-color: rgb(90, 60, 122);
     padding: 10px;
     border-radius: 50%;
+}
+
+/* media queries */
+
+@media only screen and (max-width: 500px) {
+    .container {
+        /* background-color: red; */
+    }
+
+    .menu,
+    .fa-cart-shopping {
+        font-size: 25px;
+    }
+
+    .responsive-menubar-item {
+        display: none;
+    }
+
+    .responsive-mmenubar {
+        display: block;
+    }
+
+    .title-section {
+        flex-direction: column-reverse;
+    }
+
+    .title-content {
+        width: 100%;
+        text-align: center;
+    }
+
+    .title-img {
+        width: 100%;
+        /* text-align: center; */
+        margin-bottom: 30px;
+    }
+
+    .btn {
+        padding: 30px 70px;
+    }
+
+    .company-logos {
+        flex-wrap: wrap;
+        border: none;
+        column-gap: 10px;
+    }
+
+    .collections {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .item {
+        width: 100%;
+        height: 100%;
+    }
 }
